# dksong-filetomd

./: .gitignore  .goosehints  GEMINI.md  GEMINI_MULTIMODAL_MANUAL.md  adversarial_truncation.py  config.yaml  convert_md.sh  convert_project.py  crop_dense_tables.py  cross_verify.py  describe_ctables.py  describe_timing.py  doc_audit.py  docling_table_helper.py  extract_all_via_pdf.py  extract_ava1.py  extract_ava2.py  extract_docx_multimodal.py  extract_eda_pangdan.py  extract_eda_pyojun.py  extract_gemini_multimodal.py  extract_pdf_blockdiagram.py  extract_pdf_image_analysis.py  extract_sim_platform.py  fmdw_convert_qa_phase1.sh  fmdw_mcp_server.py  fmdw_spotcheck_phase2.sh  gemini-multimodal-expert.skill  goose_convert_one.sh  hwpx_hybrid_convert.py  make_enhanced2.py  make_enhanced3.py  make_enhanced4.py  mcp_e2e_client.py  patch_leakguard2.py  pyproject.toml  pytest.ini  qa_fix.py  qa_scan.py  qwen_p1_3.md  (+11 more)
.serena/: project.yml
_prefig_refix_20260710/: LN08LPU_p149-151.md
_worklog/: README.md  build_worklog.py  index.html  mdview.html  meta.json  serve.py  slides_data.js
docs/: FITNESS_REVIEW_2026-06-04.md  H1_CONSOLIDATION_PLAN_2026-06-04.md  QA_REVIEW_2026-06-04.md
fmdw/: __init__.py  config.py  figure_extractor.py  hwp_pipeline.py  hybrid_extract.py  markitdown_pipeline.py  net_crosscheck.py  office_vision.py  ollama_extractor.py  oversized_table.py  page_tier.py  pdf_pipeline.py  resume_cache.py  vision_qa.py  vision_qa_ensemble.py  watermark_remover.py
lib/: __init__.py
scripts/: analyze_figures.py  analyze_figures_v2.py  extract_tables.py  inspect_images.py  reextract_figures.py  run_net_tracer.py
tests/: _golden_fixtures.py  _pipeline_recorder.py  test_config_sst.py  test_convert_file.py  test_docx_multimodal.py  test_ensemble_mode.py  test_figure_extractor.py  test_figure_renumber.py  test_hybrid_body_repair.py  test_low_fixes.py  test_migration_phase1.py  test_migration_phase2.py  test_migration_phase3.py  test_net_crosscheck.py  test_office_vision.py  test_ollama_extractor_integrity.py  test_orphan_scripts.py  test_oversized_matrix.py  (+13 more)
(+109 files in other folders)
